--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@personal-monorepo/shared-theme": ["libs/shared-theme/src/index.js"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
