--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "prepare": "husky",
     "lint": "nx run-many -t lint",
     "lint:fix": "nx run-many -t lint --fix",
+    "stylelint": "stylelint \"**/*.{css,scss}\" --cache",
+    "stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix --cache",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "nx run-many -t test",
@@ -17,7 +19,11 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,css,scss,md}": [
+    "*.{css,scss}": [
+      "stylelint --fix --cache",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
       "prettier --write"
     ]
   },
@@ -65,6 +71,10 @@
     "nx": "^21.3.8",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
+    "stylelint": "^16.23.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-scss": "^6.12.1",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0"
